tests/cases/errors/dpi_import_chandle/main.sv
module Top;
  import "DPI-C" function void f(input chandle h);
endmodule
